--- a/codigo/analisisR.Rmd
+++ b/codigo/analisisR.Rmd
@@ -938,7 +938,7 @@ He añadido los siguientes *widgets* al mapa, los cuales permiten interactuar di
 - **Distribución del indicador.** Permite seleccionar los barrios visualizados en función del valor de su indicador. 
 - **Tabla de indicadores.** Permite visualizar y buscar por por barrios, distritos e indicador seleccionado.  
 
-El mapa está publicado en  https://pinea.app.carto.com/map/4aced469-f471-438e-8050-1f6b26d874d2 .
+El mapa está publicado en  https://pinea.app.carto.com/map/4aced469-f471-438e-8050-1f6b26d874d2 
 
 # Conclusiones iniciales
 
@@ -1123,7 +1123,7 @@ arrange(desc(barrios_por_distrito))
 
 He generado el mapa denoninado *Clasificación de barrios según indicadores de gentrificación*
 
-El mapa está publicado en https://pinea.app.carto.com/map/5847c277-513e-4931-8e5c-b2efc0788f8e . Su contraseña es PEC3
+El mapa está publicado en  https://pinea.app.carto.com/map/5847c277-513e-4931-8e5c-b2efc0788f8e
 
 El mapa se compone de 3 capas:
 
